--- a/work-distributer.cabal
+++ b/work-distributer.cabal
@@ -20,7 +20,12 @@ Executable work-distributer
     MonadCatchIO-transformers >= 0.2.1 && < 0.4,
     mtl                       >= 2     && < 3,
     snap-core                 >= 0.9.2 && < 0.10,
-    snap-server               >= 0.9.2 && < 0.10
+    snap-server               >= 0.9.2 && < 0.10,
+    ConfigFile,
+    MissingH,
+    directory,
+    SHA,
+    utf8-string
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
