--- a/work-distributer.cabal
+++ b/work-distributer.cabal
@@ -25,7 +25,8 @@ Executable work-distributer
     MissingH,
     directory,
     SHA,
-    utf8-string
+    utf8-string,
+    datetime
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
