--- a/work-distributer.cabal
+++ b/work-distributer.cabal
@@ -19,14 +19,17 @@ Executable work-distributer
     bytestring                >= 0.9.1 && < 0.11,
     MonadCatchIO-transformers >= 0.2.1 && < 0.4,
     mtl                       >= 2     && < 3,
-    snap-core                 >= 0.9.2 && < 0.10,
-    snap-server               >= 0.9.2 && < 0.10,
+    snap                      >= 0.13,
+    snap-core                 >= 0.9   && < 0.10,
     ConfigFile,
     MissingH,
     directory,
     SHA,
     utf8-string,
-    datetime
+    datetime,
+    lens,
+    heist,
+    text
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
