--- a/work-distributer.cabal
+++ b/work-distributer.cabal
@@ -21,6 +21,7 @@ Executable work-distributer
     mtl                       >= 2     && < 3,
     snap                      >= 0.13,
     snap-core                 >= 0.9   && < 0.10,
+    snaplet-acid-state,
     ConfigFile,
     MissingH,
     directory,
@@ -29,7 +30,8 @@ Executable work-distributer
     datetime,
     lens,
     heist,
-    text
+    text,
+    safecopy
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
